AUTOMAKE_OPTIONS=dist-zip
install-data-local:
	mkdir -p $(prefix)/phpserver/generated $(prefix)/serverdata $(prefix)/serverdata/received
SUBDIRS = PACC external phpserver visualizer
EXTRA_DIST = \
bootstrap \
Makefile.cvs \
visualizer.kdevprj \
visualizer.lsm \
visualizer/MSVCPP/visualizer.sln \
visualizer/MSVCPP/visualizer.suo \
visualizer/MSVCPP/beagleviz/beagleviz.vcproj \
visualizer/MSVCPP/tree2svg/tree2svg.vcproj


