dnl Process this file with autoconf to produce a configure script.
AC_INIT(visualizer/src/BVMain.cpp)
AC_CONFIG_AUX_DIR(config)
AC_REVISION($Revision: 1.6 $)
AM_INIT_AUTOMAKE(visualizer, 0.2.1)
AM_CONFIG_HEADER(visualizer/include/config.h:config/config-h.in)
AC_PREFIX_DEFAULT(/usr/local/visualizer)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

dnl Set language.
AC_LANG_CPLUSPLUS

dnl Checks for libraries.
AC_HEADER_STDC

dnl Checks for zlib
CHECK_ZLIB

dnl Create makefiles.
AC_OUTPUT(Makefile
          PACC/Makefile
          PACC/Util/Makefile
          PACC/XML/Makefile
          external/Makefile
          external/EPIG/Makefile
          external/EPIG/EPIG/Makefile
          phpserver/Makefile
          phpserver/img/Makefile
          phpserver/samples/Makefile
          phpserver/samples/onemax/Makefile
          phpserver/samples/symbreg/Makefile
          visualizer/Makefile
          visualizer/include/Makefile
          visualizer/src/Makefile)


