SUBDIRS = img samples
phpdir  = $(prefix)/phpserver
dist_php_DATA = \
addmb.php \
addthread.php \
badlink.inc \
board.inc \
checklogin.php \
checkprofile.php \
checkregister.php \
createboard.inc \
dbconnect.inc \
execution.inc \
filemanager.inc \
filemanager.php \
help.inc \
index.inc \
index.php \
initdb.inc \
initdb.php \
leftcol.inc \
login.inc \
logout.php \
main.inc \
message.html \
message.js \
messagedone.html \
profile.inc \
readboard.inc \
readthread.inc \
register.inc \
replythread.php \
showdirectory.inc \
svgtree.php \
userlist.inc \
verifydirectory.inc \
zip.inc



